fit multi-variable reg model and evaluate RMSPE

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "732784d8",
    "metadata": {},
    "outputs": [
@@ -538,12 +538,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "399225f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here..."
+    "mpg_data_train, mpg_data_test = train_test_split(\n",
+    "    mpg_data, train_size=0.75, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -556,21 +558,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "ac1e1117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      predictor     slope  intercept\n",
+      "0  acceleration  0.057588 -15.047371\n",
+      "1        weight -0.006457 -15.047371\n",
+      "2    model_year  0.762270 -15.047371\n",
+      "3    horsepower -0.001899 -15.047371\n",
+      "4  displacement  0.000373 -15.047371\n",
+      "5     cylinders -0.160143 -15.047371\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here ...\n",
-    "\n",
-    "numeric_predictors = 🤷‍♂️\n",
-    "\n",
+    "mlm=LinearRegression()\n",
+    "mlm.fit(\n",
+    "    mpg_data_train[[\"acceleration\", \"weight\", \"model_year\", \"horsepower\", \"displacement\", \"cylinders\"]],\n",
+    "    mpg_data_train [\"mpg\"]\n",
+    ")\n",
+    "numeric_predictors = mpg_data_train[[\"acceleration\", \"weight\", \"model_year\", \"horsepower\", \"displacement\", \"cylinders\"]]\n",
     "\n",
     "# Create a DataFrame containing the slope (coefficients) and intercept\n",
     "coefficients_df = pd.DataFrame({\n",
     "    \"predictor\": numeric_predictors.columns,\n",
-    "    \"slope\": lm.coef_,\n",
-    "    \"intercept\": [lm.intercept_] * len(lm.coef_)\n",
+    "    \"slope\": mlm.coef_,\n",
+    "    \"intercept\": [mlm.intercept_] * len(mlm.coef_)\n",
     "})\n",
     "\n",
     "# Display the coefficients DataFrame\n",
@@ -594,12 +613,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "ffefa9f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The RMSPE of the multi-variable linear regression model is: 3.1855\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here ..."
+    "mpg_data_test[\"predicted\"] = mlm.predict(mpg_data_test[[\"acceleration\", \"weight\", \"model_year\", \"horsepower\", \"displacement\", \"cylinders\"]])\n",
+    "\n",
+    "# Calculate RMSPE for the multivariable model.\n",
+    "mlm_mult_test_RMSPE = mean_squared_error(\n",
+    "    y_true=mpg_data_test[\"mpg\"],\n",
+    "    y_pred=mpg_data_test[\"predicted\"]\n",
+    ")**(1/2)\n",
+    "\n",
+    "print(\"The RMSPE of the multi-variable linear regression model is:\", round(mlm_mult_test_RMSPE,4))"
    ]
   },
   {
