finalizing the third assignment.

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -73,167 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "      <th>species</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>150 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0                  5.1               3.5                1.4               0.2   \n",
-       "1                  4.9               3.0                1.4               0.2   \n",
-       "2                  4.7               3.2                1.3               0.2   \n",
-       "3                  4.6               3.1                1.5               0.2   \n",
-       "4                  5.0               3.6                1.4               0.2   \n",
-       "..                 ...               ...                ...               ...   \n",
-       "145                6.7               3.0                5.2               2.3   \n",
-       "146                6.3               2.5                5.0               1.9   \n",
-       "147                6.5               3.0                5.2               2.0   \n",
-       "148                6.2               3.4                5.4               2.3   \n",
-       "149                5.9               3.0                5.1               1.8   \n",
-       "\n",
-       "     species  \n",
-       "0          0  \n",
-       "1          0  \n",
-       "2          0  \n",
-       "3          0  \n",
-       "4          0  \n",
-       "..       ...  \n",
-       "145        2  \n",
-       "146        2  \n",
-       "147        2  \n",
-       "148        2  \n",
-       "149        2  \n",
-       "\n",
-       "[150 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "# Load the Iris dataset\n",
@@ -245,19 +88,10 @@
     "# Bind the disease progression (diabetes target) to the DataFrame\n",
     "iris_df['species'] = iris_data.target\n",
     "\n",
-    "\n",
     "# Display the DataFrame\n",
     "iris_df\n",
     "\n",
-    "#Your code here ... "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99b725c5",
-   "metadata": {},
-   "source": [
-    "> Your answer here ..."
+    "# Your Code...\n"
    ]
   },
   {
@@ -273,12 +107,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "efd6dc0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9701cd4",
+   "metadata": {},
+   "source": [
+    "**Follow-up Question:**\n",
+    "- Do you notice any patterns or relationships between the different features? How might these patterns help in distinguishing between different species?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35308e2c",
+   "metadata": {},
+   "source": [
+    "> Your answer..."
    ]
   },
   {
@@ -292,30 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "b8971d89",
+   "execution_count": null,
+   "id": "b2cfec72",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-      "0          -0.900681          1.019004          -1.340227         -1.315444   \n",
-      "1          -1.143017         -0.131979          -1.340227         -1.315444   \n",
-      "2          -1.385353          0.328414          -1.397064         -1.315444   \n",
-      "3          -1.506521          0.098217          -1.283389         -1.315444   \n",
-      "4          -1.021849          1.249201          -1.340227         -1.315444   \n",
-      "\n",
-      "   species  \n",
-      "0        0  \n",
-      "1        0  \n",
-      "2        0  \n",
-      "3        0  \n",
-      "4        0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize the StandardScaler\n",
     "scaler = StandardScaler()\n",
@@ -335,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b326e039",
+   "id": "035fa019",
    "metadata": {},
    "source": [
     "Why is it important to standardize the features of a dataset before applying clustering algorithms like K-Means? Discuss the implications of using unstandardized data in your analysis."
@@ -343,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc34b4b7",
+   "id": "53d77d5c",
    "metadata": {},
    "source": [
     "> Your answer here ... "
@@ -363,12 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "909df219",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here ..."
+    "# Your answer..."
    ]
   },
   {
@@ -389,23 +220,70 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f76bf62",
+   "id": "a6bc2f4f",
    "metadata": {},
    "source": [
     "#### **Question 5:** \n",
     "#### Bootstrapping \n",
     "\n",
-    " Implement bootstrapping on the mean of one of the sepal or petal measurement variables (e.g., Sepal Length, Petal Width) to assess the stability of the mean estimate. Generate 1000 bootstrap samples, calculate the mean for each sample, and compute a 95% confidence interval to evaluate the variability in the estimate."
+    "Implement bootstrapping on the mean of Petal Width. Generate 10000 bootstrap samples, calculate the mean for each sample, and compute a 90% confidence interval.\n",
+    "\n",
+    "hint: `use np.random.seed(123)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ffefa9f2",
+   "execution_count": null,
+   "id": "be4c4011",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here ...\n"
+    "# Your answer here...\n",
+    "\n",
+    "mean_petal_width = 🤷‍♂️\n",
+    "\n",
+    "np.random.seed(123)\n",
+    "\n",
+    "lower_bound = 🤷‍♂️\n",
+    "upper_bound = 🤷‍♂️\n",
+    "\n",
+    "# Display the result\n",
+    "print(f\"Mean of Petal Width: {mean_petal_width}\")\n",
+    "print(f\"90% Confidence Interval of Mean Petal Width: ({lower_bound}, {upper_bound})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9f73843",
+   "metadata": {},
+   "source": [
+    "**Question:**\n",
+    "- Why do we use bootstrapping in this context? What does it help us understand about the mean?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16a6e104",
+   "metadata": {},
+   "source": [
+    ">  Your answer..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0741b2ca",
+   "metadata": {},
+   "source": [
+    "**Question:**\n",
+    "- What is the purpose of calculating the confidence interval from the bootstrap samples? How does it help us interpret the variability of the estimate?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5be82ec",
+   "metadata": {},
+   "source": [
+    "> Your answer..."
    ]
   },
   {
@@ -413,7 +291,9 @@
    "id": "29096311",
    "metadata": {},
    "source": [
-    "Reflect on the variability observed in the bootstrapped means and discuss whether the mean of the selected variable appears to be a stable and reliable estimate based on the confidence interval and the spread of the bootstrapped means."
+    "**Question:**\n",
+    "\n",
+    "- Reflect on the variability observed in the bootstrapped means and discuss whether the mean of the Petal Width appears to be a stable and reliable estimate based on the confidence interval and the spread of the bootstrapped means."
    ]
   },
   {
@@ -421,7 +301,7 @@
    "id": "0a7e6778",
    "metadata": {},
    "source": [
-    "> Your answer here ..."
+    "> Your answer here..."
    ]
   },
   {
@@ -487,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.19"
   },
   "vscode": {
    "interpreter": {
