--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -34,10 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcolors\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmcolors\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KNeighborsClassifier\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "# Import standard libraries\n",
     "import pandas as pd\n",
@@ -100,6 +112,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "aeaf4856",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wine_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mwine_df\u001b[49m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m])  \u001b[38;5;66;03m# This gives the number of rows (observations)\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'wine_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(wine_df.shape[0])  # This gives the number of rows (observations)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f7573b59",
    "metadata": {},
@@ -114,7 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\n",
+    "print(wine_df.shape[1])  # This gives the number of columns (variables)\n"
    ]
   },
   {
@@ -132,7 +168,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\n",
+    "print(wine_df['class'].dtype)  # This gives the data type of the 'class' variable\n",
+    "print(wine_df['class'].unique())  # This gives the unique values of the 'class' variable\n",
+    "\n"
    ]
   },
   {
@@ -151,7 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "\n",
+    "print(wine_df.shape[1] - 1)  # Subtract 1 to exclude the 'class' column\n"
    ]
   },
   {
@@ -175,10 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cc899b59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wine_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Select predictors (excluding the last column)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m predictors \u001b[38;5;241m=\u001b[39m \u001b[43mwine_df\u001b[49m\u001b[38;5;241m.\u001b[39miloc[:, :\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Standardize the predictors\u001b[39;00m\n\u001b[0;32m      5\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'wine_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Select predictors (excluding the last column)\n",
     "predictors = wine_df.iloc[:, :-1]\n",
@@ -204,7 +258,11 @@
    "id": "403ef0bb",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    "1.Because KNN calculates distance between data points. If the features are not on the same scale, variables with larger scales will dominate the distance calculation.\n",
+    "\n",
+    "2.To make sure all variables contribute evenly to a scale when items are added together, or to make it easier to interpret results of a regression or other analysis."
    ]
   },
   {
@@ -220,7 +278,9 @@
    "id": "fdee5a15",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    "The response variable Class represents the categories or classes of wine, and it is a categorical variable. Standardization is typically applied to continuous variables to normalize the range of the data, ensuring that each feature contributes equally to the model. Since Class is not a continuous numeric variable but a discrete label, standardizing it wouldn't make sense because the values are categories, not continuous measurements."
    ]
   },
   {
@@ -236,7 +296,9 @@
    "id": "f0676c21",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...  \n",
+    "\n",
+    "Setting a seed ensures the reproducibility of results. Random processes, like splitting data into training and testing sets, will yield different results each time unless a seed is set. The seed value itself doesn't need to be a specific number, but choosing a consistent seed guarantees that the same random processes produce the same results when rerun, allowing for consistent and comparable analysis."
    ]
   },
   {
@@ -260,6 +322,20 @@
     "np.random.seed(123)\n",
     "# Create a random vector of True and False values to split the data\n",
     "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7235b74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = predictors_standardized[split]\n",
+    "X_test = predictors_standardized[~split]\n",
+    "\n",
+    "y_train = wine_df['class'][split]\n",
+    "y_test = wine_df['class'][~split]"
    ]
   },
   {
@@ -287,7 +363,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here..."
+    "# Your code here...\n",
+    "# Initialize the KNN classifier\n",
+    "knn = KNeighborsClassifier()\n",
+    "\n",
+    "# Define the parameter grid for n_neighbors\n",
+    "param_grid = {'n_neighbors': list(range(1, 51))}\n",
+    "\n",
+    "# Perform grid search with 10-fold cross-validation\n",
+    "grid_search = GridSearchCV(knn, param_grid, cv=10, scoring='accuracy')\n",
+    "\n",
+    "# Fit the model on the training data\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Identify and return the best value for n_neighbors\n",
+    "best_n_neighbors = grid_search.best_params_['n_neighbors']\n",
+    "print(\"Best n_neighbors:\", best_n_neighbors)\n"
    ]
   },
   {
@@ -308,7 +399,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here..."
+    "# Your code here...\n",
+    "# Fit the KNN model using the best n_neighbors\n",
+    "best_knn = KNeighborsClassifier(n_neighbors=best_n_neighbors)\n",
+    "best_knn.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = best_knn.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model using accuracy_score\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Test set accuracy:\", accuracy)\n"
    ]
   },
   {
@@ -377,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.2"
   },
   "vscode": {
    "interpreter": {
