2nd update Assignment_1

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -559,7 +559,8 @@
    "id": "403ef0bb",
    "metadata": {},
    "source": [
-    "# This response is summarized based on the textbook \"Data Science - A First Introduction\" page 190.  When conducting KNN classification, both scale and centre matter for each variable.  With respect to scale (size and range), the classifier predicts the class based on nearby observations, as such, any variable with a larger scale will have a larger impact (versus variables with a smaller scale).  With respect to centre (mean), the centre of some variables might be very large (salary), very small (years of education) or even a constant shift (set difference between such as Celsius and Fahrenheit).    \n",
+    "# The responses below are summarized based on the textbook \"Data Science - A First Introduction\"   \n",
+    "# When conducting KNN classification, both scale and centre matter for each variable.  With respect to scale (size and range), the classifier predicts the class based on nearby observations, as such, any variable with a larger scale will have a larger impact (versus variables with a smaller scale).  With respect to centre (mean), the centre of some variables might be very large (salary), very small (years of education) or even a constant shift (set difference between such as Celsius and Fahrenheit).    \n",
     "\n",
     "# Steps to scale and centre the data: find the mean of the variable and the standard deviation.  For each value of the variable, we subract the mean and divide by the standard deviation.  At this point all of the variables in the data set have mean = 0 and standard deviation = 1"
    ]
@@ -792,7 +793,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -807,11 +808,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.15"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "497a84dc8fec8cf8d24e7e87b6d954c9a18a327edc66feb9b9ea7e9e72cc5c7e"
-   }
   }
  },
  "nbformat": 4,
