--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -22,6 +22,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cfd1f664",
+   "metadata": {},
+   "source": [
+    "Assignment Done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5fc5001c-7715-4ebe-b0f7-e4bd04349629",
    "metadata": {},
    "source": [
