--- a/assignment_2.ipynb
+++ b/assignment_2.ipynb
@@ -221,6 +221,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f214c5bd",
+   "metadata": {},
+   "source": [
+    "The data set contains 392 observations (rows) and 9 variables (columns)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a599c73b",
    "metadata": {},
    "source": [
@@ -243,6 +251,14 @@
    ],
    "source": [
     "print(mpg_data['mpg'].dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13b6889f",
+   "metadata": {},
+   "source": [
+    "The data type of teh mpg variable is a float."
    ]
   },
   {
@@ -296,6 +312,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14715482",
+   "metadata": {},
+   "source": [
+    "The 5 rows with the greatest horsepower are: 116, 8, 13, 95, 6."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cbc54d2c",
    "metadata": {},
    "source": [
@@ -337,6 +361,14 @@
    "source": [
     "predictors = mpg_data.drop(columns=['mpg']).describe()\n",
     "print(predictors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "768a4199",
+   "metadata": {},
+   "source": [
+    "There are 6 predictor variables (cylinders, displacement, horsepower, weight acceleration, and model_year)."
    ]
   },
   {
@@ -667,7 +699,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -682,11 +714,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.15"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "497a84dc8fec8cf8d24e7e87b6d954c9a18a327edc66feb9b9ea7e9e72cc5c7e"
-   }
   }
  },
  "nbformat": 4,
