--- a/01_materials/notebooks/Classification-2.ipynb
+++ b/01_materials/notebooks/Classification-2.ipynb
@@ -118,6 +118,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What is NumPy?\n",
+    "\n",
+    "\"But wait, what is that `np.random.seed()` thing?\". It comes from **NumPy**, a popular Python library that helps us work with numbers and do math really fast, especially when dealing with large amounts of data. It's great for things like handling lists of numbers, performing calculations, and generating random numbers.\n",
+    "\n",
+    "The `np.random.seed()` function is used to control the randomness in your code. Normally, when we generate random numbers, they change every time we run the code. By setting a \"seed\" with `np.random.seed()`, we make sure the random numbers stay the same each time we run it. This is useful when we want consistent results for testing or comparisons.\n",
+    "NumPy arrays are fast and powerful, allowing us to do all sorts of math and number operations easily!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
